Update cv.text with Google FTE position
+ remove some things to make space

--- a/cv.tex
+++ b/cv.tex
@@ -37,7 +37,7 @@
 % Header section. Name on left, contact details on right
 \begin{tabularx}{\columnwidth}{@{}XX@{}}
 \textsc{\Huge{Noah Ó Donnaile}}&
-{\begin{tabularx}{\linewidth}{@{}@{}>{\raggedleft}X@{}} \rawnasc{https://noah.needs.money}\\
+{\begin{tabularx}{\linewidth}{@{}@{}>{\raggedleft}X@{}} \rawnasc{http://noah.needs.money}\\
 \rawnasc{https://github.com/iandioch}\\
 \textit{\nasc{mailto:iandioch11+cv@gmail.com}{iandioch11@gmail.com}}
 \end{tabularx}}
@@ -51,9 +51,13 @@ I am a capable and amicable full-stack developer with an interest in NLP. My suc
 
 % part 4 = https://web.archive.org/web/20120101153859/http://stefano.italians.nl:80/archives/date/2008/10
 \section{Experience}
-\fmtjobtitle{SWE Intern - Google Assistant Natural Language Generation\hfill Google Switzerland}\\
+\fmtjobtitle{Software Engineer - Natural Language Generation\hfill Google Switzerland}\\
+\fmtdate{December 2019 -- Present}\hfill\fmtaddress{Zürich, Switzerland}\\
+L4 SWE working in natural language generation (NLG) for the Google Assistant. I write tools, data pipelines, optimisations, and more, to help the Assistant learn to speak good. \fmtskill{C++}, \fmtskill{Python}, \fmtskill{Typescript}, and friends.
+\bearna
+\fmtjobtitle{SWE Intern - Natural Language Generation\hfill Google Switzerland}\\
 \fmtdate{June 2019 -- August 2019}\hfill\fmtaddress{Zürich, Switzerland}\\
-Ongoing. \fmtskill{C++}, \fmtskill{Typescript}.
+Creating a tool to crowd source lexical information about entities in \fmtskill{C++} and \fmtskill{Typescript}.
 \bearna
 \fmtjobtitle{Intern in Tools \& Resources for Irish Language Technology\hfill ADAPT Research Centre}\\
 \fmtdate{June 2018 -- July 2018}\hfill\fmtaddress{Dublin, Ireland}\\
@@ -87,16 +91,18 @@ Developed \fmtskill{Java} tools to predict a person's salary from their résumé
 \section{Education}
 \fmtjobtitle{BSc. in Computational Problem Solving \& Software Development\hfill Dublin City University}\\
 \fmtdate{September 2015 -- June 2019}\hfill\fmtaddress{Dublin, Ireland}\\
-CPSSD is the only degree in Ireland for undergraduate students with prior CS experience. Read more at \nasc{https://cpssd.net}{the course site I created}. I finished the degree \fmtskill{2\textsuperscript{nd}} in class rankings with an average grade of \fmtskill{89\%}.\\
+CPSSD is the only degree in Ireland for undergraduate students with prior CS experience. I finished the degree \fmtskill{2\textsuperscript{nd}} in class rankings with an average grade of \fmtskill{89\%} and the award of \fmtskill{First Class Honours}.\\
 \fmtskill{Extracurriculars}: 2015-16 \fmtskill{Secretary} and 2016-17 \fmtskill{Chairperson} of computing \& networking society.
 \bearna
 Earned an \fmtskill{All-Ireland Scholarship} and a \fmtskill{DCU Academic Scholarship} as a result of obtaining 605 points (of 625 maximum; \fmtskill{top 1.2\%} nationally) in the Leaving Certificate in secondary school.
 
+\if false
 \section{Notable Projects}
 \fmtjobtitle{Rabble\hfill Bachelor's Thesis}. 2018 - 2019, 7 months, team of 4\\
 \fmtblurb{\nasc{https://github.com/cpssd/rabble}{Rabble} is a decentralised blogging platform focused on breaking echo chambers \& maximising author control}\\
 Led development of recommender systems (\fmtskill{Python}, \fmtskill{Jupyter}), and \nasc{http://activitypub.rocks}{Activitypub} interoperability, along with some webserver (\fmtskill{Go}) and database (\fmtskill{SQL}) tasks. Heavily contributed to UI (\fmtskill{Typescript}, \fmtskill{React}).
 \bearna
+\fi
 \if false
 \fmtjobtitle{Dipla\hfill University Project}. 2016 - 2017, 7 months, team of 4\\
 \fmtblurb{\nasc{https://cpssd.net/project/dipla/}{Dipla} is an RPC and distributed computing framework for Python 3.5+}\\
@@ -108,10 +114,12 @@ Wrote websocket communications, task queue, transmission of logic to workers (\f
 Wrote webserver (\fmtskill{Python}, \fmtskill{Flask}, \fmtskill{jinja2}), frontend (\fmtskill{HTML}, \fmtskill{Tachyons CSS}), did data cleanup (\fmtskill{Python}). Translated into Irish. Shortlisted for the \fmtskill{DCU President’s Prize for Innovation 2017}.
 \bearna
 \fi
+\if false
 \fmtjobtitle{Feedlark\hfill University Project}. 2016, 3 months, team of 5\\
 \fmtblurb{\nasc{https://cpssd.net/project/feedlark/}{Feedlark} is a web-based RSS aggregator that promotes items matching topics the user previously liked}\\
 Designed and built microservices architecture (\fmtskill{Gearman}), topic modelling (\fmtskill{Python}, \fmtskill{spaCy}), ML recommender system
 (\fmtskill{Python}, \fmtskill{Scikit-Learn}), and database service (\fmtskill{Go}, \fmtskill{MongoDB}).
+\fi
 \section{Competitive Programming}
 \if false
 I am one of the \nasc{https://open.kattis.com/users/iandioch}{top 150 users on Kattis Online Judge}, and am in the 20 highest ranked Irish users (\fmtskill{top 0.66\%} of all users) on Project Euler.
@@ -123,7 +131,7 @@ I \nasc{https://www.computing.dcu.ie/news/irelands-best-young-computer-programme
 \small{}
 \begin{tabularx}{\columnwidth}{@{}X|X@{}}
 \fmtcompetition{Student Battle Dev Season 13}\hfill 89\textsuperscript{th} place&
-\fmtcompetition{ACM IrlCPC 2018}\hfill 1\textsuperscript{st} place\\
+\fmtcompetition{ACM IrlCPC 2019}\hfill 1\textsuperscript{st} place\\
 \fmtcompetition{HashCode 2019 Qual.}\hfill 211\textsuperscript{th} place, 1\textsuperscript{st} Irish team&
 \fmtcompetition{ICPC NWERC 2018}\hfill 55\textsuperscript{th} place, 1\textsuperscript{st} Irish team\\
 \fmtcompetition{Student Battle Dev Season 12}\hfill 57\textsuperscript{th} place&
@@ -141,5 +149,7 @@ I \nasc{https://www.computing.dcu.ie/news/irelands-best-young-computer-programme
 \fmtcompetition{Google Call to Code 2014}\hfill 6\textsuperscript{th} place\\%&Solo
 \end{tabularx}
 \normalsize{}
+\section{Misc}
+I speak native English (en-IE), and basic Irish, French, and German. I like dogs, coffee, and the smell of grass after rain. I am happy to receive emails, and I get confused when my phone rings.
 
 \end{document}
