--- a/cv.tex
+++ b/cv.tex
@@ -51,9 +51,11 @@ I am a capable and amicable full-stack developer with an interest in NLP. My suc
 
 % part 4 = https://web.archive.org/web/20120101153859/http://stefano.italians.nl:80/archives/date/2008/10
 \section{Experience}
-\fmtjobtitle{Software Engineer - Natural Language Generation\hfill Google Switzerland}\\
+\fmtjobtitle{Software Engineer IV\hfill Google Switzerland}\\
 \fmtdate{December 2019 -- Present}\hfill\fmtaddress{Zürich, Switzerland}\\
-L4 SWE working in natural language generation (NLG) for the Google Assistant. I write tools, data pipelines, optimisations, and more, to help the Assistant learn to speak good. \fmtskill{C++}, \fmtskill{Python}, \fmtskill{Typescript}, and friends.
+Working on Gemini / Bard core model quality. ``Core Contributor'' in: \textit{Gemini Team, Google. 2024. \textbf{\nasc{https://storage.googleapis.com/deepmind-media/gemini/gemini_1_report.pdf}{Gemini: A Family of Highly Capable Multimodal Models}}}.
+\bearna
+Previously worked on natural language generation (NLG) for the Google Assistant.
 \bearna
 \fmtjobtitle{SWE Intern - Natural Language Generation\hfill Google Switzerland}\\
 \fmtdate{June 2019 -- August 2019}\hfill\fmtaddress{Zürich, Switzerland}\\
@@ -61,7 +63,11 @@ Creating a tool to crowd source lexical information about entities in \fmtskill{
 \bearna
 \fmtjobtitle{Intern in Tools \& Resources for Irish Language Technology\hfill ADAPT Research Centre}\\
 \fmtdate{June 2018 -- July 2018}\hfill\fmtaddress{Dublin, Ireland}\\
-Cleaned text with \fmtskill{Python}, aligned with \fmtskill{Hunalign}. Extracted Irish multi-word expressions from corpora. \nasc{http://mycode.doesnot.run/2018/08/15/yes-no/}{Created tool to process yes/no questions in Irish} (which lacks words for "yes" \& "no") for a SMT system.
+Built SMT \& NLP tooling in \fmtskill{Python}.
+\bearna
+Extracted Irish multi-word expressions from corpora. See acknowledgement in \textit{A. Walsh, T. Lynn, J. Foster. 2019. \textbf{\nasc{https://aclanthology.org/W19-5120.pdf}{Ilfhocail: A Lexicon of Irish MWEs}}}.
+\bearna
+Created tool to process yes/no questions in Irish (which lacks words for "yes" \& "no") for a SMT system. See blogpost: \nasc{http://mycode.doesnot.run/2018/08/15/yes-no/}{mycode.doesnot.run/2018/08/15/yes-no/}
 \bearna
 \fmtjobtitle{SWE Intern - Google Trips\hfill Google Switzerland}\\
 \fmtdate{June 2017 -- May 2018}\hfill\fmtaddress{Zürich, Switzerland}\\
@@ -120,6 +126,7 @@ Wrote webserver (\fmtskill{Python}, \fmtskill{Flask}, \fmtskill{jinja2}), fronte
 Designed and built microservices architecture (\fmtskill{Gearman}), topic modelling (\fmtskill{Python}, \fmtskill{spaCy}), ML recommender system
 (\fmtskill{Python}, \fmtskill{Scikit-Learn}), and database service (\fmtskill{Go}, \fmtskill{MongoDB}).
 \fi
+\if false
 \section{Competitive Programming}
 \if false
 I am one of the \nasc{https://open.kattis.com/users/iandioch}{top 150 users on Kattis Online Judge}, and am in the 20 highest ranked Irish users (\fmtskill{top 0.66\%} of all users) on Project Euler.
@@ -148,8 +155,15 @@ I \nasc{https://www.computing.dcu.ie/news/irelands-best-young-computer-programme
 \fmtcompetition{ICPC NWERC 2015}\hfill 74\textsuperscript{th} place. 1\textsuperscript{st} Irish team\\ %&Team of 3\\
 \fmtcompetition{Google Call to Code 2014}\hfill 6\textsuperscript{th} place\\%&Solo
 \end{tabularx}
+\fi 
 \normalsize{}
 \section{Misc}
-I speak native English (en-IE), and basic Irish, French, and German. I like dogs, coffee, and the smell of grass after rain. I am happy to receive emails, and I get confused when my phone rings.
+I speak native English (en-IE), and basic Irish, German, and French.
+\bearna
+In 2015, I represented Ireland in the \fmtskill{International Olympiad in Informatics (IOI)} in Almaty, Kazakhstan.
+\bearna
+In university, I was several times on the top-placing team in the country in the \fmtskill{ICPC NWERC}, \fmtskill{ICPC UKIEPC}, \fmtskill{ACM IrlCPC}, and \fmtskill{Hashcode} programming competitions.
+\bearna
+I also led my university, Dublin City University, to become the \#2 university in France :) (\nasc{https://mycode.doesnot.run/2018/03/28/student-battle-dev-season-11/}{mycode.doesnot.run/2018/03/28/student-battle-dev-season-11/})
 
 \end{document}
